# SPDX-License-Identifier: MPL-2.0
# This file is part of the LocalPass desktop GUI (MPL-2.0), a separate workspace
# from the AGPL-3.0 core so the core's gates never build the GUI (PRD §5.6).

[package]
name = "localpass-desktop"
version = "0.1.0"
description = "LocalPass desktop GUI (Tauri 2 backend) — a thin daemon client; the webview renders and requests, all secret handling stays in Rust."
edition = "2024"
rust-version = "1.90"
license = "MPL-2.0"
repository = "https://github.com/localpass/localpass"
# `default-run` disambiguates `cargo run` (the app binary, not the lib).
default-run = "localpass-desktop"

# --- DETACHED WORKSPACE (critical, per the architecture rules) ---
# The root Cargo.toml already `exclude = ["apps"]`. Declaring our OWN empty
# `[workspace]` here fully detaches this crate: `cargo test --workspace` /
# `cargo clippy --workspace` run from the repo root never see or build the GUI,
# and this crate has its own lockfile and target dir. It reaches the AGPL core
# only through path dependencies below.
[workspace]

[lib]
# The Tauri mobile bootstrap looks for a `<name>_lib` crate; keeping the app
# logic in a lib also lets us unit-test the pure command-mapping code.
name = "localpass_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "localpass-desktop"
path = "src/main.rs"

[build-dependencies]
# Generates the Tauri context (embeds the frontend dist/, config, icons) at
# build time and runs the platform build steps.
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri 2: the OS-webview app shell. The webview renders only; every secret
# --- crosses into it exclusively through the #[tauri::command] functions here. ---
tauri = { version = "2", features = [] }
# --- Native file/save dialogs. Justification: choosing WHICH file to attach and
# --- WHERE to save a decrypted download is inherently an OS-file-picker task;
# --- under the app's strict CSP a webview has no reasonable in-page alternative
# --- (no <input type=file> path access, no filesystem reach). The plugin returns
# --- only PATHS to the backend — the attachment plaintext never enters the
# --- webview: the daemon reads the source path and writes the dest path itself.
tauri-plugin-dialog = "2"
# --- Serde for the view-model types the commands return (and daemon wire types
# --- deserialize through lp-daemon's serde derives). ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# --- The daemon client. The Tauri backend is a daemon CLIENT exactly like the
# --- CLI and the native-messaging host (LESSONS.md): it connects over the
# --- same-user-only IPC channel and proxies a small, fill-and-read command set.
# --- No key material or master password is ever held here beyond the single
# --- unlock() call that forwards the password straight to the daemon. ---
lp-daemon = { path = "../../../crates/lp-daemon" }
# --- The sync engine's device-identity parsing (public keys only). Used ONLY by
# --- the `preview_fingerprint` command, which parses a pasted LPDEV1 string and
# --- returns its fingerprint for the user to compare — a PUBLIC value, no
# --- session/secret involved. Keeping the fingerprint algorithm in lp-sync (one
# --- place) rather than reimplementing BLAKE3 in the webview avoids a JS crypto
# --- dependency and a second, divergent implementation. Trust is still enforced
# --- in the daemon (`TrustDevice` re-checks the fingerprint), so this preview is
# --- display-only and cannot widen trust. ---
lp-sync = { path = "../../../crates/lp-sync" }
# --- Profile-directory resolution reuse: `directories` yields the same default
# --- profile path the CLI uses (%APPDATA%\localpass etc.), so the GUI unlocks
# --- the same account store the CLI and daemon serve. ---
directories = "6"
# --- Password/passphrase generation done locally in the backend (the daemon
# --- protocol has no generate op). Mirrors lp-cli's generate.rs approach
# --- verbatim: getrandom (OS CSPRNG, the same source lp-crypto uses) with
# --- rejection sampling, no key material. Documented design choice in README. ---
getrandom = "0.3"
# --- Zeroize the master password buffer after it is forwarded to the daemon. ---
zeroize = { version = "1.8", features = ["zeroize_derive"] }
# --- Render this device's identity string as a pairing QR (device-pairing.md §3).
# --- Justification: the QR must be generated in Rust, not by a JS library — the
# --- webview renders, it does not compute (the same rule that keeps crypto out of
# --- JS). The encoded value is PUBLIC key material only (device id + Ed25519 /
# --- X25519 public keys + CRC), so this crosses no secret boundary.
# --- `default-features = false` + `svg` on purpose: the default set enables
# --- `image`/`pic`, dragging in the whole `image` crate for raster output we do
# --- not want — SVG-only keeps the dependency and audit surface minimal. ---
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

# --- Mobile-only: the camera QR scanner used to pair a device
# --- (device-pairing.md §3.4). Deliberately target-gated rather than a plain
# --- dependency: desktop has no scan surface, so it must not link a camera
# --- plugin at all. A scan only fills the identity box — the out-of-band
# --- fingerprint comparison still gates trusting (§3.3), exactly as for a
# --- pasted string. There is no auto-trust path. ---
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

[features]
# This feature is used by the CI/`tauri build` custom-protocol path.
custom-protocol = ["tauri/custom-protocol"]
# In-process vault backend (no daemon IPC). Mobile targets get this behaviour
# automatically via Tauri's `cfg(mobile)`; enable this feature to compile and
# test that same path on desktop. See `src/daemon.rs`.
inprocess = []

[dev-dependencies]
# Isolated temp profiles for the in-process backend integration test.
tempfile = "3"

[profile.release]
lto = "thin"
strip = "symbols"
